--- a/res/css/game.css
+++ b/res/css/game.css
@@ -69,13 +69,30 @@ body {
     height: 60px;
     width: 60px;
 }
-.shipInGarageImg{
+.shipInGarageBxImg{
+    width: 100%;
+    height: 100%;
     position: absolute;
     left: 0;
     top: 0;
-    height: 100%;
+    display: flex;
+    justify-content: center;
 }
 
+#rotateShipButton {
+    color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
+    font-size: 42px;
+    box-shadow: #000000 1px 0px 9px 0px;
+    cursor: pointer;
+    border: 0;
+    width: 225px;
+    height: 90px;
+    position: absolute;
+    left: 500px;
+    top: 350px;
+    border-radius: 8px;
+}
 #saveShipButton{
     color: black;
     font-size: 50px;
@@ -93,14 +110,18 @@ body {
 .saveShipAnimation{
     animation: saveShipButtonAnimation 1s ease  1 forwards;
 }
-#saveButtonOverLap{
+#saveButtonOverLap, #rotateButtonOverLap {
     width: 250px;
     height: 100px;
     position: absolute;
-    left: 500px;
+    left: 490px;
     top: 500px;
     background-color: transparent;
-    z-index: 0;
+    z-index: 10;
+}
+
+#rotateButtonOverLap{
+    top: 345px;
 }
 #buildShipContinue{
     display: none;
