new arrow moving + my ships in game html,css

--- a/res/css/style.css
+++ b/res/css/style.css
@@ -58,6 +58,12 @@ body {
     align-items: center;
     z-index: 3;
     overflow: hidden;
+    transition: scale 20s ease-in-out;
+}
+
+#playGameMenu:hover,
+#startTutorial:hover{
+    scale: 50;
 }
 
 a{
