--- a/res/css/game.css
+++ b/res/css/game.css
@@ -30,6 +30,7 @@ body {
 /* building ship */
 #buildShip{
     height: auto;
+    display: none;
 }
 #buildShip h1 {
     display: flex;
@@ -60,7 +61,6 @@ body {
 .shipsInGarage {
     width:  60px;
     margin-bottom: 60px;
-    background-color: black;
     cursor: pointer;
     position: relative;
 }
@@ -77,6 +77,35 @@ body {
     top: 0;
     display: flex;
     justify-content: center;
+}
+
+#arrowBx {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    left: 520px;
+    top: 143px;
+    width: 180px;
+}
+#arrowBx div {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+.arrow{
+    width: 60px;
+    color: white;
+    cursor: pointer;
+}
+#arrowLeft {
+    transform: rotate(-90deg);
+}
+#arrowRight {
+    transform: rotate(90deg);
+}
+#arrowDown {
+    transform: rotate(180deg);
 }
 
 #rotateShipButton {
@@ -138,6 +167,96 @@ body {
     top: 650px;
     border-radius: 8px;
 }
+
+#buildArea {
+    height: auto;
+    width: 662px;
+    display: flex;
+    flex-wrap: wrap;
+    border: 1px solid white;
+    position: absolute;
+    left: 800px;
+    top: 130px;
+    background-color: black;
+}
+#buildAreaRow, #myAreaRow, #enemyAreaRow{
+    width: 660px;
+    height: 60px;
+    display: flex;
+}
+#buildAreaColumn, #myAreaColumn, #enemyAreaColumn{
+    display: flex;
+    flex-direction: column;
+}
+.buildSquareRow, .buildSquareColumn, .mySquareRow, .mySquareColumn, .enemySquareRow, .enemySquareColumn {
+    width: 60px;
+    height: 60px;
+    user-select: none;
+    border: 1px solid white;
+    font-size: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#buildBoard, #myBoard, #enemyBoard{
+    height: auto;
+    width: auto;
+    display: grid;
+    grid-template-columns: repeat(10, 60px);
+    grid-template-rows: repeat(10, 60px);
+    background-color: black;
+}
+
+
+
+/* game */
+#game{
+    display: flex;
+    justify-content: space-around;
+    height: auto;
+    /* transform: translateX(100%); */
+    transform: translateX(0%);
+}
+
+#myArea, #enemyArea {
+    height: auto;
+    width: 662px;
+    display: flex;
+    flex-wrap: wrap;
+    border: 1px solid white;
+    background-color: black;
+}
+.mySquare,
+.enemySquare, .buildSquare {
+    border: 1px solid white;
+}
+
+.myShips{
+    width:  60px;
+    cursor: pointer;
+    position: absolute;
+}
+
+.myShipsBx{
+    background-color: blue;
+    height: 60px;
+    width: 60px;
+}
+
+.myShipsBxImg{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: flex;
+    justify-content: center;
+}
+
+
+
+
 @keyframes saveShipButtonAnimation {
     0% {
         box-shadow: #000000 1px 0px 9px 0px;
@@ -165,67 +284,4 @@ body {
     100% {
         transform: translateX(0)
     }
-}
-
-#buildArea{
-    height: auto;
-    width: 662px;
-    display: flex;
-    flex-wrap: wrap;
-    border: 1px solid white;
-    position: absolute;
-    left: 800px;
-    top: 130px;
-    background-color: black;
-}
-#buildAreaRow{
-    width: 660px;
-    height: 60px;
-    display: flex;
-}
-#buildAreaColumn{
-    display: flex;
-    flex-direction: column;
-}
-.buildSquareRow, .buildSquareColumn {
-    width: 60px;
-    height: 60px;
-    user-select: none;
-    border: 1px solid white;
-    font-size: 25px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-#buildBoard{
-    height: auto;
-    width: auto;
-    display: grid;
-    grid-template-columns: repeat(10, 60px);
-    grid-template-rows: repeat(10, 60px);
-    background-color: black;
-}
-
-
-/* game */
-#game{
-    display: flex;
-    justify-content: space-around;
-    height: auto;
-    transform: translateX(100%);
-}
-
-#myArea,
-#enemyArea {
-    height: 500px;
-    width: auto;
-    display: grid;
-    grid-template-columns: repeat(10, 50px);
-    grid-template-rows: repeat(10, 50px);
-    border: 1px solid white;
-}
-.mySquare,
-.enemySquare, .buildSquare {
-    border: 1px solid white;
 }
