--- a/res/css/game.css
+++ b/res/css/game.css
@@ -4,10 +4,13 @@
     box-sizing: border-box;
     color: white;
     font-family: 'Montserrat', sans-serif;
+    user-select: none;
 }
 body {
     margin: 0;
     overflow: hidden;
+    display: flex;
+    justify-content: center;
 }
 
 /* background */
@@ -27,10 +30,65 @@ body {
     top: 0;
 }
 
+
+/* enter nickname */
+#nicknameSection {
+    /* display: none; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: 2s scale, 2s opacity;
+}
+#nicknameSection h1{
+    font-size: 50px;
+    margin-top: 50px;
+}
+#nicknameCondition {
+    margin-top: 60px;
+    font-size: 23px;
+    color: red;
+}
+#enterNickname {
+    width: 200px;
+    height: 50px;
+    font-size: 30px;
+    color: white;
+    padding-left: 10px;
+    background-color: black;
+    border-radius: 10px;
+    border: 1px solid white;
+    margin-top: 28px;
+}
+#enterNickname:focus {
+    box-shadow: 2px 2px 13px 2px #ffffff66;
+}
+#submitNicknameBtn {
+    width: 200px;
+    height: 80px;
+    cursor: pointer;
+    margin-top: 50px;
+    font-size: 40px;
+    color: white;
+    background-color: black;
+    border-radius: 6px;
+    border: 0;
+    transition: 500ms box-shadow;
+    margin-top: 50px;
+}
+#submitNicknameBtn:hover {
+    box-shadow: 2px 2px 13px 2px #ffffff66;
+}
+
+
 /* building ship */
 #buildShip{
     height: auto;
-    display: none;
+    display: flex;
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    scale: 0.0001;
+    transition: 2s scale 350ms ease-out, 2s top 350ms ease-out;
 }
 #buildShip h1 {
     display: flex;
@@ -191,7 +249,6 @@ body {
 .buildSquareRow, .buildSquareColumn, .mySquareRow, .mySquareColumn, .enemySquareRow, .enemySquareColumn {
     width: 60px;
     height: 60px;
-    user-select: none;
     border: 1px solid white;
     font-size: 25px;
     display: flex;
@@ -212,11 +269,57 @@ body {
 
 /* game */
 #game{
-    display: flex;
-    justify-content: space-around;
     height: auto;
-    /* transform: translateX(100%); */
-    transform: translateX(0%);
+    display: flex;
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    scale: 0.0001;
+    transition: 2s scale 350ms ease-out, 2s top 350ms ease-out;
+}
+
+#playersTurn{
+    display: flex;
+    position: absolute;
+    left: 660px;
+    top: 20px;
+}
+#myIcon, #enemyIcon {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#playersTurnArrowBx {
+    width: 190px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#playersTurnArrow {
+    height: 70%;
+    transform: rotate(-90deg);
+}
+.iconImg {
+    height: 75%;
+}
+.iconName {
+    font-size: 20px;
+    margin-top: 5px;
+}
+
+
+
+#game h2{
+    position: absolute;
+    top: 150px;
+    margin: 0;
+    font-size: 40px;
+}
+#game h2:first-of-type{
+    left: 350px;
+}
+#game h2:last-of-type{
+    left: 1180px;
 }
 
 #myArea, #enemyArea {
@@ -226,7 +329,16 @@ body {
     flex-wrap: wrap;
     border: 1px solid white;
     background-color: black;
+    position: absolute;
+    top: 210px;
 }
+#myArea {
+    left: 150px;
+}
+#enemyArea {
+    left: 950px;
+}
+
 .mySquare,
 .enemySquare, .buildSquare {
     border: 1px solid white;
@@ -234,8 +346,9 @@ body {
 
 .myShips{
     width:  60px;
-    cursor: pointer;
     position: absolute;
+    transform-origin: 30px 30px;
+    z-index: 10;
 }
 
 .myShipsBx{
