new images + new rotation

--- a/res/css/game.css
+++ b/res/css/game.css
@@ -122,7 +122,7 @@ body {
     position: relative;
 }
 .shipsGarageBx{
-    background-color: blue;
+    /* background-color: blue; */
     height: 60px;
     width: 60px;
 }
@@ -352,7 +352,6 @@ body {
 }
 
 .myShipsBx, .enemyShipsBx {
-    background-color: blue;
     height: 60px;
     width: 60px;
 }
@@ -366,18 +365,22 @@ body {
     display: flex;
     justify-content: center;
 }
-.enemyShipsImg {
+/* .enemyShipsImg {
     transform: rotate(90deg);
     width: 240px;
     height: 60px;
     position: absolute;
     left: -91px;
     top: 90px;
-}
+} */
 
 #nicknameSection {
     display: none;
 }
+/* #buildShip {
+    scale: 1;
+    top: 0;
+} */
 #game {
     scale: 1;
     top: 0;
