--- a/res/css/game.css
+++ b/res/css/game.css
@@ -358,6 +358,16 @@ body {
 #myBullet img, #enemyBullet img {
     height: 100%;
 }
+#myExplosion, #enemyExplosion {
+    width: 130px;
+    height: 130px;
+    position: absolute;
+    z-index: 1000;
+}
+#myExplosion img, #enemyExplosion img {
+    height: 100%;
+    width: 100%;
+}
 
 #myArea,
 #enemyArea {
