--- a/res/css/game.css
+++ b/res/css/game.css
@@ -432,7 +432,18 @@ body {
 
 .enemyShips {
     display: none;
-    filter: brightness(35%);
+    position: relative;
+    /* filter: brightness(35%); */
+}
+.enemyShips::before{
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #00000091;
+    z-index: 9;
 }
 /* .enemyShipsImg {
     transform: rotate(90deg);
