--- a/res/css/game.css
+++ b/res/css/game.css
@@ -326,7 +326,8 @@ body {
     font-size: 40px;
 }
 
-#myCannon, #enemyCannon {
+#myCannon,
+#enemyCannon {
     height: 150px;
     width: auto;
     position: absolute;
@@ -338,11 +339,13 @@ body {
     left: 1220px;
     transform: rotateY(180deg);
 }
-#myCannon img, #enemyCannon img{
+#myCannon img,
+#enemyCannon img {
     height: 100%;
 }
 
-#myBullet, #enemyBullet {
+#myBullet,
+#enemyBullet {
     position: absolute;
     left: 440px;
     top: 4px;
@@ -355,16 +358,19 @@ body {
     left: 1259px;
     transform: rotate(286deg);
 }
-#myBullet img, #enemyBullet img {
+#myBullet img,
+#enemyBullet img {
     height: 100%;
 }
-#myExplosion, #enemyExplosion {
+#myExplosion,
+#enemyExplosion {
     width: 130px;
     height: 130px;
     position: absolute;
     z-index: 1000;
 }
-#myExplosion img, #enemyExplosion img {
+#myExplosion img,
+#enemyExplosion img {
     height: 100%;
     width: 100%;
 }
@@ -456,17 +462,82 @@ body {
 
 #endSection {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
     width: 100%;
-    background-color: black;
     z-index: 1000;
-
     display: none;
 }
+#endArea {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 600px;
+    height: 400px;
+    border-radius: 10px;
+    box-shadow: 1px 1px 20px 20px #0000004f;
+}
+#winnerInfo {
+    font-size: 50px;
+    color: black;
+    margin-top: 0;
+}
+#scoreBoard {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 80%;
+}
 
+#scoreColon {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#scoreColon div {
+    width: 15px;
+    height: 15px;
+    border-radius: 100%;
+    background-color: black;
+    margin-top: 20px;
+}
+#myScore,
+#enemyScore {
+    margin-top: 15px;
+}
+
+#myScoreColumn,
+#enemyScoreColumn {
+    width: 45%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#myScoreColumn div,
+#enemyScoreColumn div {
+    color: black;
+    font-size: 40px;
+}
+#endButtonBx {
+    margin-top: 40px;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+}
+#mainMenuButton,
+#playAgainButton {
+    background-color: black;
+    text-decoration: none;
+    border: none;
+    padding: 15px;
+    font-size: 25px;
+    cursor: pointer;
+    border-radius: 5px;
+    box-shadow: 1px 1px 13px 0 black;
+}
 
 
 /* #nicknameSection {
