--- a/res/css/style.css
+++ b/res/css/style.css
@@ -1,9 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 
 * {
     box-sizing: border-box;
     color: white;
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
+    user-select: none;
 }
 body {
     margin: 0;
@@ -58,18 +59,66 @@ body {
     align-items: center;
     z-index: 3;
     overflow: hidden;
-    transition: scale 2s ease-in-out;
+    transition: scale 1.5s ease-in-out;
 }
 
 #playGameMenu:hover,
-#startTutorial:hover{
-    scale: 4;
+#startTutorial:hover {
+    scale: 3;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
+#refreshButton {
+    position: absolute;
+    top: 50px;
+    right: 50px;
+    width: 80px;
+    cursor: pointer;
+}
 
+#refreshSection {
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    display: none;
+}
+#refreshArea {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 300px;
+    width: 800px;
+    background-color: black;
+    border-radius: 10px;
+}
+#refreshSection h1 {
+    font-size: 50px;
+}
 
+#refreshBx {
+    display: flex;
+    justify-content: space-evenly;
+    width: 80%;
+}
 
+#refreshYes,
+#refreshNo {
+    background-color: white;
+    color: black;
+    text-decoration: none;
+    border: none;
+    padding: 15px;
+    font-size: 50px;
+    cursor: pointer;
+    border-radius: 5px;
+    box-shadow: 1px 1px 13px 0 black;
+}
